[tool.poetry]
name = "qatm_pytorch"
version = "0.1.0"
description = ""
authors = ["Nathan Yang"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.2"
scikit-learn = "^1.0.2"
torchvision = "^0.11.3"
opencv-python = "^4.5.5"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
